--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -6,7 +6,7 @@
     transform: translate(-50%, -50%);
     width: 100vw;
     height: 100vh;
-    background-color: white;
+    background-color: #244a7a;
     opacity: 0.9;
     display: flex;
     flex-direction: column;
