--- a/src/components/CryptoCard/CryptoCard.css
+++ b/src/components/CryptoCard/CryptoCard.css
@@ -25,6 +25,9 @@
 }
 
 .modal-close {
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
     background: none;
     border: none;
     font-size: 1.2rem;
