--- a/src/components/CryptoCards/CryptoCards.css
+++ b/src/components/CryptoCards/CryptoCards.css
@@ -6,19 +6,43 @@
     font-size: 20px;
 }
 
+.sort-button {
+    cursor: pointer;
+}
+
+.positive {
+    color: #6eff4e;
+}
+
+.negative {
+    color: #ff4e4e;
+}
+
+.neutral {
+    color: #6a6a6a;
+}
+
 .coin-logo {
     width: 3rem;
 }
 
 .page-container {
     display: flex;
+    font-size: 1.5rem;
     flex-direction: row;
     gap: 1rem;
 }
 
 .page-button {
-    padding: 10px 20px;
-    border-radius: 15px;
+    border-radius: 50%;
+    padding: 0.5rem 1rem;
+    border: 1px solid white;
+}
+
+.page-button:hover {
+    transform: scale(1.2);
+    background-color: #222222;
+    cursor: pointer;
 }
 
 table {
@@ -65,3 +89,4 @@ th, td {
         padding: 0.2rem;
     }
 }
+
