--- a/src/components/CryptoCard/CryptoCard.scss
+++ b/src/components/CryptoCard/CryptoCard.scss
@@ -23,6 +23,10 @@
         align-items: center;
     }
 
+    .modal-select {
+
+    }
+
     .modal-close {
         position: absolute;
         top: 1rem;
