--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -1,8 +1,8 @@
 .chart-wrapper {
     position: relative;
     width: 100%;
-    height: 400px;
-    border: 1px solid #e5e5e5;
+    height: 450px;
+    border: 1px solid #3875c3;
     border-radius: 12px;
     padding: 16px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
@@ -10,8 +10,8 @@
 
     .position-difference-price {
         position: fixed;
-        top: 6rem;
-        right: 2rem;
+        right: 32px;
+        margin: auto;
     }
 }
 
