--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -4,8 +4,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: #244a7a;
     opacity: 0.9;
     display: flex;
